--- a/quiz/package.json
+++ b/quiz/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.13.2",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "grafana": "^1.0.1",
